--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,10 +68,10 @@ header nav ul li:hover {
 /* about section */
 
 .about {
-    padding: 50px;
+    padding: 15px;
     display: block;
     flex-wrap: wrap;
-    background-color:rgb(213, 214, 218);
+    background-color: rgb(213, 214, 218);
 }
 
 .about h2 {
@@ -87,6 +87,7 @@ header nav ul li:hover {
     padding-bottom: 20px;
     border-bottom: 3px solid var(--text-color);
     font-size: 20px;
+    margin-bottom: 50px;
 }
 
 
