--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ header nav ul li:hover {
     opacity: 0.8;
     margin-bottom: 10px;
     flex: 0 0 100%;
+    display: block;
 }
 
 .websites h3 {
@@ -142,8 +143,7 @@ header nav ul li:hover {
     flex-direction: row;
 }
 .website-name {
-    display: flex;
-    flex: 0 0 49%;
+    display: block;
 }
 
 .placeholder {
@@ -177,13 +177,27 @@ header nav ul li:hover {
     flex: 0 0 30%;
 }
 
+.picture3 {
+    background-image: url(../images/thanks-for-giving-screenshot.png);
+    display: flex;
+    justify-content: space-around;
+    text-decoration: none;
+    cursor: pointer;
+    overflow: hidden;
+    border: 3px solid rgba(17, 37, 37, 0.8);
+    flex-wrap: wrap;
+    min-height: 250px;
+    flex: 0 0 30%;
+}
+
+
 
 .picture1:hover {
     background-size: 1100px;
     opacity: 1;
 }
 
-.pictures:hover, .picture2:hover {
+.pictures:hover, .picture2:hover, .picture3:hover {
     background-size: 550px;
     opacity: 1;
 }
